minimize memory requirements for loaded protections